argocd/cosmos/sts_cosmos.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: cosmos
  name: cosmos
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cosmos
  serviceName: cosmos
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cosmos
    spec:
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups: [65534]
      shareProcessNamespace: false
      enableServiceLinks: false
      volumes:
        - emptyDir: {}
          name: emptydir
        - name: init-sh
          configMap:
            name: init-sh
            defaultMode: 0777
      containers:
        - name: cosmos
          image: ghcr.io/cosmos/gaia:v23.0.0-rc4
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            privileged: false
            readOnlyRootFilesystem: true
          command: ["sh", "-c"]
          args:
            - |-
              gaiad start --x-crisis-skip-assert-invariants --home $HOME
          ports:
            - containerPort: 26657
              name: rpc
          volumeMounts:
            - mountPath: /tmp
              name: emptydir
            - name: data
              mountPath: "/gaia"
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
