argocd/cosmos/svc_cosmos.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cosmos
  labels:
    app.kubernetes.io/name: cosmos
spec:
  selector:
    app.kubernetes.io/name: cosmos
  type: ClusterIP
  ports:
    - name: p2p
      port: 26656
      targetPort: p2p
    - name: rpc
      port: 26657
      targetPort: rpc
