argocd/cosmos/ing_cosmos.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
  labels:
    app.kubernetes.io/name: cosmos
  name: cosmos
spec:
  ingressClassName: nginx
  rules:
    - host: cosmos.iakimenko.me
      http:
        paths:
          - backend:
              service:
                name: cosmos
                port:
                  name: rpc
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - cosmos.iakimenko.me
      secretName: cosmos-iakimenko-me
